stop writing default values in json